--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
+springBootVersion=2.2.4.RELEASE
+kotlinCourotinesVersion=1.3.3
+arrowVersion=0.10.0
+spekVersion=2.0.5
+kotlinVersion=1.3.61
 kotlin.code.style=official
-arrow_version=0.10.0
-spek_version=2.0.5
-spring_boot_version=2.1.6.RELEASE
+
+
 netty_version=4.1.32.Final
 reactor_version=Californium-SR6
-kotlin_courotines_version=1.3.3
